# fsdiff

./: .gitignore  CMakeLists.txt  LICENSE.txt  PATCH_FORMAT_SPEC.md  README.md
.github/workflows/: ci.yml
cmake/: FsdiffCompilerConfig.cmake  FsdiffConfig.cmake.in  FsdiffSIMD.cmake  fsdiff.pc.in
include/fsdiff/: diff.h  error.h  fsdiff.h  options.h  patch.h  simd_config.h.in  types.h  version.h.in
src/: CMakeLists.txt  diff.c  getopt_compat.h  patch.c  platform.h
src/core/: block_tracker.c  block_tracker.h  crc32.c  crc32.h  hash_table.c  hash_table.h  memory_pool.c  memory_pool.h
src/encoding/: bkdf_header.c  bkdf_header.h  operation_encoder.c  operation_encoder.h  stream_writer.c  stream_writer.h
src/io/: buffered_writer.c  buffered_writer.h  mmap_reader.c  mmap_reader.h  source_reader.c  source_reader.h
src/simd/: projection_avx2.c  projection_neon.c  projection_scalar.c  simd_avx2.c  simd_dispatch.c  simd_dispatch.h  simd_neon.c  simd_scalar.c
src/stages/: stage_controller.c  stage_controller.h  stage_identity.c  stage_identity.h  stage_partial.c  stage_partial.h  stage_relocation.c  stage_relocation.h
tests/: CMakeLists.txt  DECODER_TEST_COVERAGE.md  test_bkdf_header.c  test_block_tracker.c  test_buffered_writer.c  test_crc32.c  test_decoder.c  test_memory_pool.c  test_mmap_reader.c  test_roundtrip.c  test_simd.c  test_source_reader.c
tools/: CMakeLists.txt  fsdiff.c
